--- a/platformio.ini
+++ b/platformio.ini
@@ -7,14 +7,51 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-
-[env:lilygo-t-display-s3]
+[common]
 platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-lib_deps = 
+lib_deps =
 	bodmer/TFT_eSPI@2.5.43
-	fbiego/CST816S@1.3.0
 	denyssene/SimpleKalmanFilter@0.1.0
+build_flags =
+	-D USER_SETUP_LOADED=1
+
+[env:lilygo-t-display-s3]
+extends = common
+lib_deps =
+	${common.lib_deps}
+	fbiego/CST816S@1.3.0
+build_flags =
+	;extend common build flags if any
+	${common.build_flags}
+    -D ST7789_DRIVER=1
+    -D TFT_RGB_ORDER=TFT_RGB
+    -D TFT_INVERSION_ON
+    -D TFT_PARALLEL_8_BIT=1
+    -D TFT_WIDTH=170
+    -D TFT_HEIGHT=320
+    -D TFT_CS=6
+    -D TFT_DC=7
+    -D TFT_RST=5
+    -D TFT_WR=8
+    -D TFT_RD=9
+    -D TFT_D0=39
+    -D TFT_D1=40
+    -D TFT_D2=41
+    -D TFT_D3=42
+    -D TFT_D4=45
+    -D TFT_D5=46
+    -D TFT_D6=47
+    -D TFT_D7=48
+    -D TFT_BL=38
+    -D LOAD_GLCD=1
+    -D LOAD_FONT2=1
+    -D LOAD_FONT4=1
+    -D LOAD_FONT6=1
+    -D LOAD_FONT7=1
+    -D LOAD_FONT8=1
+    -D LOAD_GFXFF=1
+    -D SMOOTH_FONT=1
