--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [common]
-platform = espressif32
-board = lilygo-t-display-s3
+platform = espressif32@6.6.0
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
@@ -20,6 +19,7 @@ build_flags =
 	-D USER_SETUP_LOADED=1
 
 [env:lilygo-t-display-s3]
+board = lilygo-t-displays3
 extends = common
 lib_deps =
 	${common.lib_deps}
