--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,34 @@
 {
-    "editor.defaultFormatter": "ms-vscode.cpptools",
-    "editor.formatOnSave": true
-}
+    "C_Cpp.intelliSenseEngine": "default",
+    "files.associations": {
+      "*.h": "c",
+      "*.c": "c",
+      "array": "c",
+      "string": "c",
+      "string_view": "c",
+      "cstdint": "c",
+      "*.cpp": "cpp",
+      "*.hpp": "cpp",
+      "*.tpp": "cpp"
+    },
+    "editor.tabSize": 2,
+    "files.eol": "\n",
+    "[c]": {
+      "editor.autoIndent": "full",
+      "editor.wordBasedSuggestions": "off",
+      "editor.suggest.insertMode": "replace",
+      "editor.semanticHighlighting.enabled": true,
+      "editor.foldingStrategy": "auto",
+      "editor.formatOnSaveMode": "file",
+      "editor.formatOnSave": true,
+      "editor.wrappingStrategy": "advanced",
+      "editor.formatOnPaste": false
+    },
+    "C_Cpp.clang_format_style": "{ BasedOnStyle: Microsoft, IndentWidth: 2, ColumnLimit: 120, IndentPPDirectives: BeforeHash, BraceWrapping: { AfterControlStatement: false, AfterFunction: false, AfterClass: false, AfterStruct: false, AfterEnum: false } }",
+    "cmake.configureOnOpen": false,
+    "files.exclude": {
+      "*.dev.zip": true,
+      "sdkconfig.*.old": true
+    },
+  }
+  
