Enable CAN/UART comms

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,14 @@ lib_deps =
 	denyssene/SimpleKalmanFilter@0.1.0
 build_flags =
 	-D USER_SETUP_LOADED=1
+    ; VESC Communication Configuration
+    ; 1 = UART, 2 = CAN
+    -D VESC_COMM_TYPE=1
+    ; Unit Configuration
+    ; 0 = Metric (km, km/h), 1 = Imperial (mi, mph)
+    -D USE_IMPERIAL_UNITS=0
+    ;-D VESC_CONTROLLER_ID=10
+    ;-D VESC_OWN_CAN_ID=12
 
 [env:lilygo-t-display-s3]
 board = lilygo-t-displays3
