--- a/platformio.ini
+++ b/platformio.ini
@@ -36,7 +36,7 @@ build_flags =
 	;extend common build flags if any
 	${common.build_flags}
     -D ST7789_DRIVER=1
-    -D TFT_RGB_ORDER=TFT_RGB
+    -D TFT_RGB_ORDER=TFT_BGR
     -D TFT_INVERSION_ON
     -D TFT_PARALLEL_8_BIT=1
     -D TFT_WIDTH=170
