Implement pattern unlock mode Add more OTA config

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,9 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = lilygo-t-display-s3
+
 [common]
 platform = espressif32@6.6.0
 framework = arduino
@@ -25,6 +28,7 @@ build_flags =
     -D USE_IMPERIAL_UNITS=0
     ;-D VESC_CONTROLLER_ID=10
     ;-D VESC_OWN_CAN_ID=12
+    -D THEME_COLOR=0x07E0  ; Green
 
 [env:lilygo-t-display-s3]
 board = lilygo-t-displays3
@@ -63,3 +67,8 @@ build_flags =
     -D LOAD_FONT8=1
     -D LOAD_GFXFF=1
     -D SMOOTH_FONT=1
+
+[env:lilygo-t-display-s3-ota]
+extends = env:lilygo-t-display-s3
+upload_protocol = espota
+upload_port = revolution-dashboard.local
