--- a/platformio.ini
+++ b/platformio.ini
@@ -19,16 +19,16 @@ lib_deps =
 	bodmer/TFT_eSPI@2.5.43
 	denyssene/SimpleKalmanFilter@0.1.0
 build_flags =
-	-D USER_SETUP_LOADED=1
-    ; VESC Communication Configuration
-    ; 1 = UART, 2 = CAN
-    -D VESC_COMM_TYPE=1
-    ; Unit Configuration
-    ; 0 = Metric (km, km/h), 1 = Imperial (mi, mph)
-    -D USE_IMPERIAL_UNITS=0
-    ;-D VESC_CONTROLLER_ID=10
-    ;-D VESC_OWN_CAN_ID=12
-    -D THEME_COLOR=0x07E0  ; Green
+	-D USER_SETUP_LOADED=1    
+    ; USER CONFIG
+    -D VESC_COMM_TYPE=2 ; 1 = UART, 2 = CAN
+    -D CAN_BAUD_RATE=250000
+    -D VESC_CONTROLLER_CAN_ID=10    
+    -D CAN_ID=10 ; Unique CAN ID for this device
+    -D TFT_RGB_ORDER=TFT_BGR
+    -D THEME_COLOR=0x07E0
+    -D BOOSTED_BMS=1
+    -D USE_IMPERIAL_UNITS=0 ; 0 = Metric (km, km/h), 1 = Imperial (mi, mph)
 
 [env:lilygo-t-display-s3]
 board = lilygo-t-displays3
