--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,8 @@ build_flags =
     ; USER CONFIG
     -D VESC_COMM_TYPE=2 ; 1 = UART, 2 = CAN
     -D CAN_BAUD_RATE=250000
+    -D BOOT_LOGO_REPLACE_COLOR=0x104B
+    -D BOOT_LOGO_TOLERANCE=10
     -D VESC_CONTROLLER_CAN_ID=10    
     -D CAN_ID=10 ; Unique CAN ID for this device
     -D TFT_RGB_ORDER=TFT_BGR
